...
      if !hasExercises {
        ContentUnavailableView {
          ContentUnavailableLogoLabel(title: "No Exercises")
        } description: {
          Text("Add an exercise to use it in workouts and templates.")
        } actions: {
          Button("Add Exercise", systemImage: "plus", action: addExercise)
            .buttonStyle(.borderedProminent)
            .controlSize(.large)
            .tint(.pink)
        }
      }
    }
...
